Update `SegmentScope` to `Arena`