@@ -5,7 +5,7 @@
 package org.asterisk.crypto.hash;
 
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.lang.foreign.ValueLayout;
 import java.util.Arrays;
 import java.util.Objects;
@@ -163,7 +163,7 @@ public class MarsupilamiFourteen implements Xof {
         private static final ValueLayout.OfLong LAYOUT = Tools.LITTLE_ENDIAN_64_BIT;
 
         private final long[] state = new long[25];
-        private final MemorySegment buffer = MemorySegment.allocateNative(BLOCK_SIZE, SegmentScope.auto());
+        private final MemorySegment buffer = Arena.ofAuto().allocate(BLOCK_SIZE);
         private int position = 0;
 
         private void round(MemorySegment input, long offset) {
