@@ -5,7 +5,7 @@
 package org.asterisk.crypto.helper;
 
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.util.Objects;
 import org.asterisk.crypto.AuthenticatedCipher;
 
@@ -23,13 +23,13 @@ public abstract class AbstractAuthenticaterEngine implements AuthenticatedCipher
     private boolean ingestingAAD = true;
 
     public AbstractAuthenticaterEngine(int blockSize) {
-        buffer = MemorySegment.allocateNative(blockSize, SegmentScope.auto());
+        buffer = Arena.ofAuto().allocate(blockSize);
         this.msgBlockSize = blockSize;
         this.aadBlockSize = blockSize;
     }
 
     public AbstractAuthenticaterEngine(int msgBlockSize, int aadBlockSize) {
-        buffer = MemorySegment.allocateNative(Math.max(msgBlockSize, aadBlockSize), SegmentScope.auto());
+        buffer = Arena.ofAuto().allocate(Math.max(msgBlockSize, aadBlockSize));
         this.msgBlockSize = msgBlockSize;
         this.aadBlockSize = aadBlockSize;
     }
